Update Create Card UI and Standardize Dates
* Add date format and provider to shared module
* Remove dayjs and use moment everywhere
* Update UI for create card
* Add !important for small fix on board UI
* Make region required in UI and DB

--- a/alcs-frontend/src/app/features/board/board.component.html
+++ b/alcs-frontend/src/app/features/board/board.component.html
@@ -7,7 +7,7 @@
       </h2>
     </div>
     <div>
-      <button mat-flat-button color="primary" (click)="onCreate()">+ New Card</button>
+      <button mat-flat-button color="primary" (click)="onCreate()">+ New Application</button>
     </div>
   </div>
   <div class="board-content">
