--- a/alcs-frontend/src/app/shared/card/card.component.scss
+++ b/alcs-frontend/src/app/shared/card/card.component.scss
@@ -3,7 +3,7 @@
 .card {
   border: 1px solid #ccc;
   height: 160px;
-  margin-bottom: 1rem;
+  margin-bottom: 1rem !important;
   cursor: grab;
   width: 280px;
   font-size: 16px;
