--- a/alcs-frontend/src/app/features/application/application-meeting/application-meeting-dialog/application-meeting-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/application-meeting/application-meeting-dialog/application-meeting-dialog.component.html
@@ -16,7 +16,7 @@
         />
         <mat-datepicker-toggle matSuffix [for]="startDate"></mat-datepicker-toggle>
         <mat-datepicker #startDate type="date"> </mat-datepicker>
-        <mat-hint>{{ model.startDate | date: 'mediumDate' }}</mat-hint>
+        <mat-hint>{{ model.startDate | momentFormat: dateFormat }}</mat-hint>
       </mat-form-field>
 
       <mat-form-field appearance="fill" class="flex-child">
@@ -24,7 +24,7 @@
         <input matInput [matDatepicker]="endDate" [(ngModel)]="model.endDate" name="endDate" [min]="model.startDate" />
         <mat-datepicker-toggle matSuffix [for]="endDate"></mat-datepicker-toggle>
         <mat-datepicker #endDate type="date"> </mat-datepicker>
-        <mat-hint>{{ model.endDate | date: 'mediumDate' }}</mat-hint>
+        <mat-hint>{{ model.endDate | momentFormat: dateFormat }}</mat-hint>
       </mat-form-field>
     </div>
     <div class="reason-wrapper">
