--- a/alcs-frontend/src/app/features/application/application-meeting/application-meeting.component.html
+++ b/alcs-frontend/src/app/features/application/application-meeting/application-meeting.component.html
@@ -12,12 +12,12 @@
 <table mat-table [dataSource]="siteVisits" class="mat-elevation-z8 width-100 section">
   <ng-container matColumnDef="startDate">
     <th mat-header-cell *matHeaderCellDef>Start Date</th>
-    <td mat-cell *matCellDef="let element">{{ element.startDate | date: 'mediumDate' }}</td>
+    <td mat-cell *matCellDef="let element">{{ element.startDate | momentFormat: dateFormat }}</td>
   </ng-container>
 
   <ng-container matColumnDef="endDate">
     <th mat-header-cell *matHeaderCellDef>End Date</th>
-    <td mat-cell *matCellDef="let element">{{ element.endDate | date: 'mediumDate' }}</td>
+    <td mat-cell *matCellDef="let element">{{ element.endDate | momentFormat: dateFormat }}</td>
   </ng-container>
 
   <ng-container matColumnDef="action">
@@ -58,12 +58,12 @@
 <table mat-table [dataSource]="applicantMeetings" class="mat-elevation-z8 width-100 section">
   <ng-container matColumnDef="startDate">
     <th mat-header-cell *matHeaderCellDef>Start Date</th>
-    <td mat-cell *matCellDef="let element">{{ element.startDate | date: 'mediumDate' }}</td>
+    <td mat-cell *matCellDef="let element">{{ element.startDate | momentFormat: dateFormat }}</td>
   </ng-container>
 
   <ng-container matColumnDef="endDate">
     <th mat-header-cell *matHeaderCellDef>End Date</th>
-    <td mat-cell *matCellDef="let element">{{ element.endDate | date: 'mediumDate' }}</td>
+    <td mat-cell *matCellDef="let element">{{ element.endDate | momentFormat: dateFormat }}</td>
   </ng-container>
 
   <ng-container matColumnDef="action">
