--- a/alcs-frontend/src/app/features/application/application-meeting/application-meeting-dialog/application-meeting-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/application-meeting/application-meeting-dialog/application-meeting-dialog.component.html
@@ -24,7 +24,7 @@
         <input matInput [matDatepicker]="endDate" [(ngModel)]="model.endDate" name="endDate" [min]="model.startDate" />
         <mat-datepicker-toggle matSuffix [for]="endDate"></mat-datepicker-toggle>
         <mat-datepicker #endDate type="date"> </mat-datepicker>
-        <mat-hint>{{ model.endDate | momentFormat: dateFormat }}</mat-hint>
+        <mat-hint>{{ model.endDate || now | momentFormat: dateFormat }}</mat-hint>
       </mat-form-field>
     </div>
     <div class="reason-wrapper">
