--- a/alcs-frontend/src/app/features/application/review/decision-meeting/decision-meeting.component.html
+++ b/alcs-frontend/src/app/features/application/review/decision-meeting/decision-meeting.component.html
@@ -14,7 +14,7 @@
 <table mat-table [dataSource]="decisionMeetings" class="mat-elevation-z4 width-100">
   <ng-container matColumnDef="date">
     <th mat-header-cell *matHeaderCellDef>Date</th>
-    <td mat-cell *matCellDef="let element">{{ element.date | momentFormat: dateFormat }}</td>
+    <td mat-cell *matCellDef="let element">{{ element.date | momentFormat }}</td>
   </ng-container>
 
   <ng-container matColumnDef="action">
