--- a/alcs-frontend/src/app/shared/card/card.component.html
+++ b/alcs-frontend/src/app/shared/card/card.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="cardData.latestDecisionDate" class="decision-date-info">
-  {{ cardData.latestDecisionDate | momentFormat: dateFormat }}
+  {{ cardData.latestDecisionDate | momentFormat }}
 </div>
 <mat-card
   class="card body1-text"
