--- a/alcs-frontend/src/app/features/meeting/meeting-overview/meeting-overview.component.scss
+++ b/alcs-frontend/src/app/features/meeting/meeting-overview/meeting-overview.component.scss
@@ -39,6 +39,11 @@ mat-panel-description {
   justify-content: flex-end;
 }
 
+.mat-expansion-panel-header-title {
+  margin-right: 0;
+}
+
+
 .main-panel-description {
   visibility: hidden;
 
