Add Meeting Overview to Commissioner home page
* Move meeting-overview to shared components

--- a/alcs-frontend/src/app/features/board/board.component.html
+++ b/alcs-frontend/src/app/features/board/board.component.html
@@ -1,7 +1,7 @@
 <div class="layout">
   <div class="board-header">
     <div>
-      <h2 class="board-title">
+      <h2 class="board-title center">
         <app-favorite-button [boardCode]="selectedBoardCode" [isFavorite]="boardIsFavourite"></app-favorite-button
         >{{ boardTitle }}
       </h2>
