--- a/alcs-frontend/src/app/features/board/card-detail-dialog/card-detail-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/card-detail-dialog/card-detail-dialog.component.html
@@ -109,6 +109,9 @@
       [(ngModel)]="selectedApplicationStatus"
       (change)="onStatusSelected($event)"
     >
+      <ng-template ng-option-tmp let-item="item">
+        <span [innerHTML]="item.label"> </span>
+      </ng-template>
     </ng-select>
     <ng-select
       class="card-assignee"
